const mongoose = require("mongoose");

const patientMedicalSchema = new mongoose.Schema({
    user: {
        type: mongoose.Schema.ObjectId,
        ref: 'User',
        required: true,
        unique: true
    },
    age: {
        type: Number,
        required: [true, 'Age is required']
    },
    gender: {
        type: String,
        enum: ['male', 'female'],
        required: [true, 'Gender is required']
    },

    diseaseType: {
    type: String,
    enum: ['heart', 'diabetes', 'pressure'],
    required: true
},
durationInYears: {
    type: Number,
    required: true
},

followUpWithDoctor: {
    type: Boolean,
    default: false
},
symptoms: [
    {
    type: String
    }
],
    weight: {
        type: Number,
        required: [true, 'Weight is required']
    },
    height: {
        type: Number,
        required: [true, 'Height is required']
    },
    medications: {
        type: [String],
        default: []
    },
    otherNotes: {
        type: String
    },

    createdAt: {
        type: Date,
        default: Date.now
    }
});

module.exports = mongoose.model("PatientMedical", patientMedicalSchema);
